# nixos-gateway

./: .gitignore  AGENTS.md  LICENSE  README.md  branding.nix  flake.nix  palette.nix  test-ssh-api.nix
.github/: FUNDING.yml
ci/: ci-pipeline.nix
docs/: Optimisations.md  UI_Local_User_Stories.md  UI_Requirements.md  UI_User_Stories.md  api-gateway.md  byoip-bgp.md  cdn.md  compatibility-matrix.md  config-reload.md  direct-connect-bgp-peering.md  health-checks.md  internet-gateway.md  nat-gateway.md  policy-routing.md  qa_sentinel_prompt.md  scribe.md  service-mesh.md  suggested_improvements.md  test-baseline-report.md  test_architect.md  transit-gateway.md  verification_workflow.md
examples/: 8021x-nac-example.nix  README.md  alix-gateway.toml  api-gateway-example.nix  basic-gateway.nix  bgp-enhanced-example.nix  bgp-routing-example.nix  byoip-bgp-example.nix  cdn-example.nix  dns-only.nix  environment-specific-config.md  ipv6-transition-example.nix  nat-gateway-example.nix  policy-routing-example.nix  sdwan-traffic-engineering-example.nix  secret-rotation-automation-example.nix  secret-rotation-example.nix  service-mesh-example.nix  vrf-support-example.nix  xdp-acceleration-example.nix
hosts/: alix.nix
improvements/: 01-data-validation-enhancements.md  02-module-system-dependencies.md  03-service-health-checks.md  04-dynamic-configuration-reload.md  05-configuration-templates.md  06-environment-specific-overrides.md  07-secrets-management-integration.md  18-log-aggregation.md  (+62 more)
tools/gateway-health/: Cargo.toml
tools/gateway-health/data/: org.gateway.Health.service  org.gateway.Health.xml
tools/gateway-health/src/: config.rs  main.rs  stats.rs
tools/gateway-setup/: Cargo.toml
tools/gateway-setup/src/: config.rs  main.rs
(+1253 files in other folders)
