[package]
name = "gateway-health"
version = "0.1.0"
edition = "2021"
description = "D-Bus system service for ALIX gateway health monitoring"

[dependencies]
zbus = { version = "3", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
