[package]
name = "gateway-setup"
version = "0.1.0"
edition = "2021"
description = "First-boot config generator for ALIX gateway (reads TOML, writes service configs)"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
