[package]
name = "gateway-setup"
version = "0.1.0"
edition = "2021"
description = "Config generator for ALIX gateway (TOML → networkd/nftables/hostapd)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
